2005-04-12  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.6.7 ====

	* gtk/gtkactiongroup.c (gtk_action_group_add_action_with_accel): 
	Revert the fix for #170727, since it causes problems
	with user-specified accelerators. 

	* gtk/gtkimage.c (gtk_image_calc_size, gtk_image_expose): 
	Revert the changes to display broken images, since there
	are applications which rely on the old behaviour.

2005-04-11  Ivan, Wong Yat Cheung  <email@ivanwong.info>

	Fix #300218:

	* gdk/win32/gdkselection-win32.c (gdk_selection_convert): Fix
	C99ism.

	* gtk/updateiconcache.c: Guard inclusion of unistd.h and
	utime.h.

2005-04-11  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version.

2005-04-10  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.6.6 ===

	* gdk/abicheck.sh: Handle duplicate symbols.

	* NEWS: Updates

2005-04-09  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkinput-xfree.c:
	* gdk/x11/gdkinput-none.c:
	* gdk/gtk.symbols: Some more fixes necessary to 
	make building with gcc 4 work.

	Add 16x16 versions of the zoom icons and of 
	GTK_STOCK_INDEX. Some of the images were taken from 
	the hicolor icon theme, and were originally created 
	by Jakub Steiner and Tuomas Kuosmanen. 	(#167515, 
	Vincent Noel)
	
	* gtk/stock-icons/stock_index_16.png:
	* gtk/stock-icons/stock_zoom_1_16.png:
	* gtk/stock-icons/stock_zoom_fit_16.png:
	* gtk/stock-icons/stock_zoom_in_16.png:
	* gtk/stock-icons/stock_zoom_out_16.png: New images.
	
	* gtk/stock-icons/Makefile.am: Add the new images. 

	* gtk/gtkiconfactory.c (get_default_icons): Add the new 
	images. 

	* gtk/gtkimage.c (gtk_image_calc_size, gtk_image_expose): 
	Don't display too many broken images.  (#169870, Roman
	Kagan, patch by Ivan Wong)

	* gtk/gtkwidget.c (gtk_widget_unparent): Remove debugging
	output.  (#300013, Tommi Komulainen)

2005-04-09  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.6.5 ===
