@@ -1,3 +1,12 @@
+2005-04-15  Federico Mena Quintero  <federico@ximian.com>
+
+	* gtk/gtkfilechooserdefault.c (pending_select_paths_process):
+	Patch from Christian Neumair <chris@gnome-de.org>; only select the
+	first row if we are in OPEN mode.  The only other case we were
+	letting pass through was SELECT_FOLDER, but selecting the first
+	row when changing folders confuses people when folders are
+	actually being selected.  Fixes #171885.
+
 2005-04-12  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.in: Bump version
